--- a/css/agency.css
+++ b/css/agency.css
@@ -257,14 +257,35 @@ header.masthead .intro-text .intro-heading {
 }
 
 .service-heading {
-  margin: 15px 0;
+  margin: 10px 0;
   text-transform: none;
+  
 }
+
+#services .card{
+  box-shadow: 0px 10px 10px rgba(123, 119, 119, 0.481);
+  background: #ffffff;
+  height: 100%;
+ 
+ 
+}
+
+
+
+
+
+ 
+
+
+
+
 
 #portfolio .portfolio-item {
   right: 0;
   margin: 0 0 15px;
 }
+
+
 
 #cortinas .portfolio-item {
   right: 0;
@@ -755,8 +776,23 @@ header.masthead .intro-text .intro-heading {
 .team-member p {
   margin-top: 0;
 }
+ #team .social-buttons li a{
+  font-size: 20px;
+  line-height: 50px;
+  display: block;
+  width: 50px;
+  height: 50px;
+  transition: all 0.3s;
+  color: white;
+  border-radius: 100%;
+  outline: none;
+  background-color: #ff4500;
+
+ }
+ 
 
 section#contact {
+  width: 100%;
   background-color: #212529;
   background-image: url('../img/map-image.png');
   background-repeat: no-repeat;
@@ -822,8 +858,15 @@ section#contact :-ms-input-placeholder {
 }
 
 .footer {
-  padding: 25px 0;
+  background: #ff4500;
+  width: 100%;
+  padding: 15px 0;
   text-align: center;
+  text-decoration: #212529;
+  color: #ffffff;
+ font-family: fantasy;
+  font-size: 100%;
+  
 }
 
 .footer span.copyright {
@@ -840,7 +883,8 @@ section#contact :-ms-input-placeholder {
   line-height: 40px;
   margin-bottom: 0;
   text-transform: none;
-  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+  
+font-family:  BlinkMacSystemFont, 'Segoe UI',
     Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji',
     'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
@@ -859,7 +903,7 @@ ul.social-buttons li a {
   color: white;
   border-radius: 100%;
   outline: none;
-  background-color: #212529;
+  background-color: #55585b;
 }
 
 ul.social-buttons li a:active,
